--- a/intro.css
+++ b/intro.css
@@ -68,6 +68,7 @@ a:hover, a:active{
   .tittle{
     font-size:2.5rem;
     color:white;
+    font-family:Initial;
   }
   .button-area button{
     font-size:1rem;
