--- a/intro.css
+++ b/intro.css
@@ -12,6 +12,16 @@ body {
   text-align:center;
 
 }
+
+/*PRELOADER*/
+#preloader{
+  background:black url(introimg/preloader.gif) no-repeat center center;
+  background-size:20%;
+  height: 100vh;
+  width:100%;
+  position:fixed;
+
+}
 /*The Title*/
 .title{
   color:rgb(255, 255, 255);
